# Minor-Project-Internship

./: .gitignore  agent.py  app.py  docker-compose.yml  document_loader.py  ingest.py  main.py  memory.py  pyproject.toml  readme.md  reset_db.py  server.py  setup_offline.py
templates/: index.html
